--- a/tex/paper.bib
+++ b/tex/paper.bib
@@ -1,67 +1,85 @@
-@conference{paper:def, 
-	author	= {Dinakar Dhurjati and Sumant Kowshik and Vikram Adve and Chris Lattner},
-	title	= {Memory Safety Without Runtime Checks or Garbage Collection},
-	booktitle = {Proceedings of the 2003 ACM SIGPLAN Conference on Language, Compiler, and Tool for Embedded Systems},
-	year 	= 2003,
+@article{wright_felleise:typesafety,
+	author = {Andrew Wright and Matthias Felleisen},
+	title = {A Syntactic Approach to Type Soundness},
+	journal = {Information and Computation},
+	volume = {115},
+	pages = {38-94},
+	month = {11},
+	year = {1994},
+}
+
+@article{milner:type_polymorphism,
+	author = {Robin Milner},
+	title = {A Theory of Type Polimorphism in Programming}, 
+	journal = {Journal of Computer and Sciences},
+	volume = {7},
+	pages = {348-375},
+	month = {4},
+	year = {1978},
 }
 
 @book{gollmann:computersecurity,
-	author 	= {Dietere Gollmann},
-	title 	= {Computer Security},
+	author = {Dietere Gollmann},
+	title = {Computer Security},
 	publisher = {John Wiley \& Sons Ltd},
-	year 	= 2011,
+	year = 2011,
 	edition	= 3,
-	isbn 	= {978-0-470-74115-3},
-}
-
-@techreport{nist:800,
-	author 	= {Wayne, Jansen and Theodore Winograd and Karen Scarfone},
-	title 	= {Guidelines on Active Content and Mobile Code },
-	institution = {NIST},
-	year 	= 2008,
-	number	= {800-28},
-	month	= 3,
+	isbn = {978-0-470-74115-3},
 }
 
 @book{stallings:os,
-	author 	= {William Stallings},
-	title	= {Operating Systems: Internals and Design Principles},
+	author = {William Stallings},
+	title = {Operating Systems: Internals and Design Principles},
 	publisher = {Pearson Education},
-	year 	= 2012,
+	year = 2012,
 	edition	= 7,
-	isbn 	= {978-0-13-230998},
+	isbn = {978-0-13-230998},
+}
+
+@conference{paper:def, 
+	author	= {Dinakar Dhurjati and Sumant Kowshik and Vikram Adve and Chris Lattner},
+	title = {Memory Safety Without Runtime Checks or Garbage Collection},
+	booktitle = {Proceedings of the 2003 ACM SIGPLAN Conference on Language, Compiler, and Tool for Embedded Systems},
+	year = 2003,
 }
 
 @misc{rust:language,
 	author	= {Steve Klabnik and Carol  Nichols},
-	title	= {The Rust Programming Language},
-	url 	= {https://doc.rust-lang.org/book/title-page.html},
+	title = {The Rust Programming Language},
+	url = {https://doc.rust-lang.org/book/title-page.html},
 }
 
 @misc{rust:reference,
-	title	= {The Rust Reference},
+	title = {The Rust Reference},
 	url	= {https://doc.rust-lang.org/reference/introduction.html},
 	key	= {The Rust Reference},
 }
 
 @misc{rust:unstable,
-	title	= {The Rust Unstable Book},
+	title = {The Rust Unstable Book},
 	url	= {https://doc.rust-lang.org/nightly/unstable-book/compiler-flags.html},
-	key 	= {The Rust Unstable Book},
+	key = {The Rust Unstable Book},
 }
 
 @misc{rust:rustonomicon,
-	title	= {Rustonomicon},
+	title = {Rustonomicon},
 	url	= {https://doc.rust-lang.org/nomicon/index.html},
-	key 	= {Rustonomicon},
+	key = {Rustonomicon},
 }
 
-@article{typesafety,
-	author	= {Andrew Wright and Matthias Felleisen},
-	title 	= {A Syntactic Approach to Type Soundness},
-	journal = {Information and Computation},
-	volume	= {115},
-	pages	= {38-94},
-	month	= {11},
-	year	= {1994},
+@misc{cencia:dispense,
+	author = {Pietro Cenciarelli},
+	title = {Dispense del corso Linguaggi di Programmazione},
+	year = {2019},
+	url = {http://wwwusers.di.uniroma1.it/~lpara/DISPENSE/note.pdf},
+	key = {Dispense del corso},
+}
+
+@techreport{nist:800,
+	author = {Wayne, Jansen and Theodore Winograd and Karen Scarfone},
+	title = {Guidelines on Active Content and Mobile Code },
+	institution = {NIST},
+	year = 2008,
+	number = {800-28},
+	month = 3,
 }
